public/stylesheets/results.css
/* Text Color */
.white-text{
    color: rgb(255, 255, 255);
}
.font-big h1{
    font-size: 1.5m;
}

/* Black magic height */
.results-frame {
    width: 100%;
    height: calc(100vh - 70px);
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;

    gap: 15px;
  }
  

/* Boxes */
.box{
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    gap: 2.5vh;
}
.boxbg{
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    max-height: 300px;
    border: solid;
    padding: 8vh;
    border-color: rgb(255, 255, 255) ;
}

/* Have to make it visible again because using 2 style sheets */
.btn {
    visibility: visible;

    width: 100%;
}

.buttons {
    width: 100%;

    display: flex;
    justify-content: center;
    align-items: center;
    gap: 60px;
}

/* may have to adjust padding later */
.score{
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;

    padding-top: 7px;
    padding-bottom: 7px;

    gap: 20px;
}

